--- a/platforms/android/res/xml/config.xml
+++ b/platforms/android/res/xml/config.xml
@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='utf-8'?>
-<widget id="net.edrake.kittehcoinbalance" version="1.0" xmlns="http://www.w3.org/ns/widgets" xmlns:cdv="http://cordova.apache.org/ns/1.0">
+<widget id="net.edrake.dogecoinbalancewow" version="1.0" xmlns="http://www.w3.org/ns/widgets" xmlns:cdv="http://cordova.apache.org/ns/1.0">
     <preference name="loglevel" value="DEBUG" />
     <feature name="App">
         <param name="android-package" value="org.apache.cordova.App" />
@@ -13,13 +13,9 @@
     <feature name="InAppBrowser">
         <param name="android-package" value="org.apache.cordova.inappbrowser.InAppBrowser" />
     </feature>
-    <name>Litecoin Easy Check</name>
+    <name>Dogecoin Balance Wow</name>
     <description>
-		Check the market price of Litecoin. Simple and easy. Backend caches data from the CryptoCoinCharts.info API.
-    </description>
-    <name>KittehCoin Balance</name>
-    <description>
-		See how meowny KittehCoin you own and how much they’re worth.
+		See how many Dogecoin you own and how much they're worth. Such richs!
     </description>
     <author email="drakee@gmail.com" href="https://github.com/psydrake">
         Drake Emko
