--- a/www/css/app.css
+++ b/www/css/app.css
@@ -1,7 +1,7 @@
 /* app css stylesheet */
 
 body {
-    font-family:"Comic Sans MS", cursive, sans-serif;
+    font-family:"Comic Sans MS", sans-serif;
 }
 
 .menu {
