added swipe left / right to navigate screens. added text-align:left for td tags that do not align properly in wp8

--- a/www/partials/about.html
+++ b/www/partials/about.html
@@ -1,4 +1,4 @@
-<div class="jumbotron">
+<div class="jumbotron" ng-swipe-right="goto('settings')">
 	<h3>Dogecoin Balance Wow</h3>
 
 	<div class="row-fluid">
