--- a/www/partials/add.html
+++ b/www/partials/add.html
@@ -9,10 +9,10 @@
 
 				<table class="table-balances">
 					<tr>
-						<td><input ng-model="wallet.label" placeholder="Wallet Label" size="20" maxlength="20"/></td>
+						<td style="text-align:left"><input ng-model="wallet.label" placeholder="Wallet Label" size="20" maxlength="20"/></td>
 					</tr>
 					<tr>
-						<td><input ng-model="wallet.address" placeholder="Wallet Address" size="44" maxlength="40"/></td>
+						<td style="text-align:left"><input ng-model="wallet.address" placeholder="Wallet Address" size="44" maxlength="40"/></td>
 					</tr>
 				</table>
 				<div class="actionButtons">
