--- a/www/partials/edit.html
+++ b/www/partials/edit.html
@@ -1,4 +1,4 @@
-<div class="jumbotron">
+<div class="jumbotron" ng-swipe-right="goto('home')" ng-swipe-left="goto('settings')">
     <div class="row-fluid">
 		<div class="span12">
 
@@ -14,12 +14,12 @@
 
 				<table class="table-balances" ng-repeat="wallet in wallets track by wallet.label + wallet.address">
 					<tr>
-						<td><a href="javascript:void(0)" ng-click="remove($index)"><i class="fa fa-minus-circle minus"></i></a></td>
-						<td><input ng-model="wallet.label" placeholder="My Wallet" size="20" maxlength="20"/></td>
+						<td style="text-align:left"><a href="javascript:void(0)" ng-click="remove($index)"><i class="fa fa-minus-circle minus"></i></a></td>
+						<td style="text-align:left"><input ng-model="wallet.label" placeholder="My Wallet" size="20" maxlength="20"/></td>
 					</tr>
 					<tr>
-						<td></td>
-						<td><input ng-model="wallet.address" size="44" maxlength="40"/></td>
+						<td style="text-align:left"></td>
+						<td style="text-align:left"><input ng-model="wallet.address" size="44" maxlength="40"/></td>
 					</tr>
 				</table>
 				<div class="actionButtons">
