--- a/www/partials/about.html
+++ b/www/partials/about.html
@@ -6,6 +6,7 @@
 		<p>See how many Dogecoin you own. Such wow!</p>
 		<p>Version {{data.version}}</p>
 		<p>By Drake Emko</p>
+		<p><a href="javascript:void(0)" ng-click="openLink('http://d2kg4h6gsenx6a.cloudfront.net/support.html')" target="_blank">Support and FAQ</a> page</p>
 		<p>Your feedback is welcome. Email: <a href="mailto:drakee@gmail.com">drakee@gmail.com</a></p>
 		<p>Donations welcome too! Send to: <span class="walletAddress balance">D7AKf9hN4zXkEyHgCNYPR2UP2rEFb3zjJQ</span> (such generous!)</p>
 	</div>
