used media queries to fit text inputs on smaller screens

--- a/www/css/app.css
+++ b/www/css/app.css
@@ -234,3 +234,22 @@ body {
 .fine-print {
 	font-size: smaller;
 }
+
+/* Media queries for different screen sizes */
+@media screen and (max-width: 640px){
+    .table-balances input {
+		width: 340px;
+	}
+}
+
+@media screen and (max-width: 480px){
+    .table-balances input {
+		width: 270px;
+	}
+}
+
+@media screen and (max-width: 400px){
+    .table-balances input {
+		width: 220px;
+	}
+}
