public address text fits better on smaller screens

--- a/www/css/app.css
+++ b/www/css/app.css
@@ -246,10 +246,24 @@ body {
     .table-balances input {
 		width: 270px;
 	}
+
+	.walletAddress {
+		font-size: small;
+	}
 }
 
 @media screen and (max-width: 400px){
     .table-balances input {
 		width: 220px;
+	}
+
+	.walletAddress {
+		font-size: x-small;
+	}
+}
+
+@Media screen and (max-width: 380px){
+    .table-balances input {
+		width: 186px;
 	}
 }
