--- a/www/partials/about.html
+++ b/www/partials/about.html
@@ -14,6 +14,9 @@
 </div>
 
 <div class="footer">
-	<img src="img/Dogecoin_32.png" alt="Dogecoin"/> Balance Wow uses data from the <a href="javascript:void(0)" ng-click="openLink('https://dogechain.info/chain/Dogecoin/')" target="_blank">Dogecoin Blockchain</a> <a href="javascript:void(0)" ng-click="openLink('https://chain.so/')" target="_blank">Explorer</a> and <a href="javascript:void(0)" ng-click="openLink('http://www.cryptocoincharts.info/')" target="_blank">CryptoCoinCharts</a> API.
+	<img src="img/Dogecoin_32.png" alt="Dogecoin"/> Balance Wow uses data from the <a href="javascript:void(0)" ng-click="openLink('https://dogechain.info/chain/Dogecoin/')" target="_blank">Dogecoin Blockchain</a> 
+<a href="javascript:void(0)" ng-click="openLink('https://chain.so/')" target="_blank">Explorer</a> and the
+<a href="javascript:void(0)" ng-click="openLink('http://www.cryptocoincharts.info/')" target="_blank">CryptoCoinCharts</a> and 
+<a href="javascript:void(0)" ng-click="openLink('https://bitcoinaverage.com/')" target="_blank">BitcoinAverage Price Index</a> APIs.
 </div>
 
